--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,15 @@
 [tox]
-envlist = py38
+envlist = py38, report
 
 [testenv]
 commands = pytest --cov=shopping_list
 deps = .[test]
 setenv = 
     SECRET_CONFIG="not_needed_yet"
+
+[testenv:report]
+deps = coverage
+skip_install = true
+commands =
+    coverage report
+    coverage html
