Clean up package installation and testing

--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
-envlist = py38, report
+envlist = clean, py38, py39, report
 
 [testenv]
-commands = pytest --cov=shopping_list
-deps = .[test]
+commands = pytest --cov=shopping_list --cov-append
+extras = run_tests
 setenv = 
     SECRET_CONFIG="not_needed_yet"
 
@@ -13,3 +13,8 @@ skip_install = true
 commands =
     coverage report
     coverage html
+
+[testenv:clean]
+deps=coverage
+skip_install = true
+commands = coverage erase
